2002-06-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html_read_row) : handle merges (colspan/rowspan)

2002-06-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html.h (html_file_open) : fix prototype 
	* html_read.c (html_read_buffer) : disable
	(html_get_sheet) : new
	(html_read_row) : new
	(html_read_table) : new
	(html_search_for_tables) : really find tables
	(html_read_buffer) : change invocation of html_search_for_tables

2002-06-06  Jody Goldberg <jody@gnome.org>

	* html_read.c (html_file_open) : convert to using libgsf.
	  And rewrite to use libxml2's html parser.  We still need to walk the
	  resulting parse tree.

2002-05-29  Jody Goldberg <jody@gnome.org>

	* boot.c : remove gnome.h
	* font.c : ditto.
	* roff.c : use libgnome/gnome-i18n.h

2002-05-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.4

2002-05-13  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html_read.c (html32_read_buffer) : make static

2002-04-29  Jody Goldberg <jody@gnome.org>

	* Release 1.1.3

2002-04-16  Jody Goldberg <jody@gnome.org>

	* html_read.c (html32_file_open) : switch to mmap and break the bogus
	  little parser out into.
	(html32_read_buffer) : here.  Take a guess at a decent interface for
	  buffer parsing.  The goal is to register these in the clpboard.

2002-04-16  Jody Goldberg <jody@gnome.org>

	* html_read.c : split the read functionality into a seprate file to
	  start work on a parser for buffers.

2002-04-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html.c (html_write_border_style_40) : new
	(html_get_border_style) : new
	(write_sheet) : for html4 set replace cell spacing with cell padding
	(write_cell) : call html_write_border_style_40
	
2002-04-09  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* html.c (write_cell) : include styles specs for HTML4.0

2002-04-02  Jody Goldberg <jody@gnome.org>

	* latex.c (latex2e_write_multicolumn_cell) : Cell::col_info is
	  deprecated.  Use Cell::pos::col

2002-03-25  Jody Goldberg <jody@gnome.org>
