@@ -1,7 +1,7 @@
 Gnumeric 1.1.6
 
 Andreas:
-	* Fix html import (at a very rudimentary level)
+	* Fix html import
 
 Jody:
 	* Have the stf dialog use the default font.
